[project]
name = "pulse-net"
version = "0.1.0"
description = "Pulse-Net — media sharing API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "imagekitio>=5.4.0",
    "python-dotenv>=1.2.2",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.37.0",
    "aiosqlite>=0.21.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
